<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CirculoFragment">

    <EditText
        android:id="@+id/txtRaio"
        android:layout_width="349dp"
        android:layout_height="49dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/hint_raio"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnArea"
        android:layout_width="160dp"
        android:layout_height="49dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="160dp"
        android:text="@string/btn_calcular_area"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPerimetro"
        android:layout_width="180dp"
        android:layout_height="49dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="160dp"
        android:text="@string/btn_calcular_perimetro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="315dp"
        android:layout_height="165dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="320dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>